# pyspark_python_test

./: .gitignore  README.md  main.py  pyproject.toml  test.py
data/irisparquet/: .part-00000-3a80fa79-2700-48e7-8b1c-d386e5f5d03f-c000.snappy.parquet.crc  part-00000-3a80fa79-2700-48e7-8b1c-d386e5f5d03f-c000.snappy.parquet
pipeline/: __init__.py  example_pipeline.py
pipeline/transformations/: __init__.py  simplify_column_names.py  transformation_base.py
tests/: test_pipeline.py
utils/: spark_helper.py
